implement vanilla/quantized C inference for ResNet models
Execution requires an additional parameter, "model size," which specifies the size of the ResNet model. For example:

$./run 18 resnet18.bin <images>

--- a/export.ipynb
+++ b/export.ipynb
@@ -11,7 +11,8 @@
     "import torch\n",
     "import struct\n",
     "import numpy as np\n",
-    "from sympy import divisors"
+    "from sympy import divisors\n",
+    "import copy"
    ]
   },
   {
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "8e29ffa9",
    "metadata": {},
    "outputs": [],
@@ -167,38 +168,51 @@
     "    2. CNN, FC and BN layers' configuration\n",
     "    3. CNN, FC and BN layers' parameters\n",
     "    '''\n",
+    "    model = copy.deepcopy(model)\n",
     "    f = open(file_path, \"wb\")\n",
     "    # write model config\n",
     "    conv_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Conv2d)]\n",
     "    bn_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.BatchNorm2d)]\n",
     "    for conv_layer, bn_layer in zip(conv_layers, bn_layers):\n",
-    "        fold_batchnorm(conv_layer, bn_layer) # fold batchnorm layers into convolutional layers\n",
+    "        fold_batchnorm(conv_layer, bn_layer) # fold batchnorm2d layers into convolutional layers\n",
     "    nconv = len(conv_layers)\n",
+    "    # read batchnorm1d layers to which batchnorm folding cannot be applied\n",
+    "    bn_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.BatchNorm1d)]\n",
+    "    nbn = len(bn_layers)\n",
     "    linear_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Linear)]\n",
     "    nlinear = len(linear_layers)\n",
     "    nclasses = 10\n",
-    "    header = struct.pack(\"3i\", nclasses, nconv, nlinear)\n",
+    "    header = struct.pack(\"4i\", nclasses, nconv, nlinear, nbn)\n",
     "    f.write(header)\n",
     "\n",
     "    # write layers' config\n",
     "    offset = 0 # the number of bytes in float32 (i.e. offset 1 = 4 bytes)\n",
-    "    for layer in conv_layers:\n",
-    "        bias = 1 if layer.bias is not None else 0\n",
-    "        f.write(struct.pack(\"7i\", layer.kernel_size[0], layer.stride[0], layer.padding[0],\n",
-    "                layer.in_channels, layer.out_channels, offset, bias))\n",
+    "    for l in conv_layers:\n",
+    "        bias = 1 if l.bias is not None else 0\n",
+    "        f.write(struct.pack(\"7i\", l.kernel_size[0], l.stride[0], l.padding[0],\n",
+    "                l.in_channels, l.out_channels, offset, bias))\n",
     "        # set offset to the start of next layer\n",
-    "        t_offset =  layer.out_channels*layer.in_channels*layer.kernel_size[0]**2\n",
-    "        # Check if the layer has a bias term and adjust the offset accordingly\n",
-    "        offset += t_offset + bias * layer.out_channels  # Include biases in the offset if bias is not None\n",
+    "        t_offset =  l.out_channels * l.in_channels * l.kernel_size[0]**2\n",
+    "        # check if the layer has a bias term and adjust the offset accordingly\n",
+    "        offset += t_offset + bias * l.out_channels  # include biases in the offset if bias is not None\n",
     "\n",
     "    for l in linear_layers:\n",
     "        bias = 1 if l.bias is not None else 0\n",
     "        f.write(struct.pack(\"4i\", l.in_features, l.out_features, offset, bias))\n",
     "        offset += l.in_features * l.out_features + bias * l.out_features\n",
-    "          \n",
+    "\n",
+    "    for l in bn_layers:\n",
+    "        f.write(struct.pack(\"2i\", l.num_features, offset))\n",
+    "        # set offset to the start of next layer\n",
+    "        offset += 4 * l.num_features # weight, bias, running_mean, running_var\n",
+    "\n",
     "    # write the weights and biases of the model\n",
     "    for l in [*conv_layers, *linear_layers]:\n",
     "        for p in l.parameters():\n",
+    "            serialize_fp32(f, p)\n",
+    "\n",
+    "    for l in bn_layers:\n",
+    "        for p in [l.weight, l.bias, l.running_mean, l.running_var]:\n",
     "            serialize_fp32(f, p)\n",
     "\n",
     "    f.close()\n",
@@ -207,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "fdbbe72d",
    "metadata": {},
    "outputs": [
@@ -228,8 +242,9 @@
     "        super(TestModel, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 1, kernel_size=3, padding=1, bias=True)\n",
     "        self.conv2 = nn.Conv2d(1, 1, kernel_size=3, padding=1, bias=False)\n",
-    "        self.bn = nn.BatchNorm2d(1)\n",
+    "        self.bn2d = nn.BatchNorm2d(1)\n",
     "        self.fc1 = nn.Linear(3, 2)\n",
+    "        self.bn1d = nn.BatchNorm1d(2)\n",
     "        self.fc2 = nn.Linear(2, 1, bias=False)\n",
     "\n",
     "m = TestModel()\n",
@@ -237,14 +252,14 @@
     "def test_export_model():\n",
     "    fname = '/tmp/.test.bin'\n",
     "    export_model(m, fname)\n",
-    "    assert os.path.getsize(fname)==216 # manucally calc from export_model()\n",
+    "    assert os.path.getsize(fname)==260 # manucally calc from export_model()\n",
     "\n",
     "test_export_model()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "6a09db19",
    "metadata": {},
    "outputs": [],
@@ -272,12 +287,12 @@
     "            assert torch.allclose(output_original, output_folded, atol=1e-5), \"Output mismatch after folding.\"\n",
     "\n",
     "test_bias_not_none()\n",
-    "test_folding()\n"
+    "test_folding()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "71f18915",
    "metadata": {},
    "outputs": [],
@@ -312,7 +327,8 @@
     "    nconv = len(conv_layers)\n",
     "    linear_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Linear)]\n",
     "    nlinear = len(linear_layers)\n",
-    "    bn_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.BatchNorm2d)]\n",
+    "    bn_layers = [layer for layer in model.modules()\n",
+    "                 if isinstance(layer, torch.nn.BatchNorm1d) or isinstance(layer, torch.nn.BatchNorm2d)]\n",
     "    nbn = len(bn_layers)\n",
     "    nclasses = 10\n",
     "    nparameters = sum(p.numel() for layer in [*conv_layers, *linear_layers] for p in layer.parameters())\n",
@@ -322,40 +338,38 @@
     "    qoffset = 0 # offset for quantized parameters\n",
     "    soffset = 0 # offset for scaling factors\n",
     "    group_sizes = [] # save group sizes of each layer\n",
-    "    for layer in conv_layers:\n",
+    "    for l in conv_layers:\n",
     "        # calculates group sizes for weights and biases\n",
-    "        gs_weight = calculate_groupsize(layer.in_channels * layer.kernel_size[0]**2, gs)\n",
-    "        gs_bias = calculate_groupsize(layer.out_channels, gs) if layer.bias is not None else 0\n",
+    "        gs_weight = calculate_groupsize(l.in_channels * l.kernel_size[0]**2, gs)\n",
+    "        gs_bias = calculate_groupsize(l.out_channels, gs) if l.bias is not None else 0\n",
     "        group_sizes.append(gs_weight)\n",
-    "        if layer.bias is not None:\n",
+    "        if l.bias is not None:\n",
     "            group_sizes.append(gs_bias)\n",
     "\n",
-    "        f.write(struct.pack(\"9i\", layer.kernel_size[0], layer.stride[0], layer.padding[0],\n",
-    "                layer.in_channels, layer.out_channels, qoffset, soffset, gs_weight, gs_bias))\n",
+    "        f.write(struct.pack(\"9i\", l.kernel_size[0], l.stride[0], l.padding[0], l.in_channels,\n",
+    "                            l.out_channels, qoffset, soffset, gs_weight, gs_bias))\n",
     "        # set offsets to the start of next layer\n",
-    "        nweights = layer.out_channels * layer.in_channels * layer.kernel_size[0]**2\n",
-    "        if layer.bias is not None:\n",
-    "            qoffset += nweights + layer.out_channels\n",
-    "            soffset += nweights // gs_weight + layer.out_channels // gs_bias\n",
+    "        nweights = l.out_channels * l.in_channels * l.kernel_size[0]**2\n",
+    "        if l.bias is not None:\n",
+    "            qoffset += nweights + l.out_channels\n",
+    "            soffset += nweights // gs_weight + l.out_channels // gs_bias\n",
     "        else:\n",
     "            qoffset += nweights\n",
     "            soffset += nweights // gs_weight\n",
     "\n",
-    "    for layer in linear_layers:\n",
-    "       \n",
-    "        gs_weight = calculate_groupsize(layer.in_features, gs)\n",
-    "        gs_bias = calculate_groupsize(layer.out_features, gs) if layer.bias is not None else 0\n",
+    "    for l in linear_layers:\n",
+    "        gs_weight = calculate_groupsize(l.in_features, gs)\n",
+    "        gs_bias = calculate_groupsize(l.out_features, gs) if l.bias is not None else 0\n",
     "        group_sizes.append(gs_weight)\n",
-    "        if layer.bias is not None:\n",
+    "        if l.bias is not None:\n",
     "            group_sizes.append(gs_bias)\n",
     "\n",
-    "        f.write(struct.pack(\"6i\", layer.in_features, layer.out_features, qoffset, soffset,\n",
-    "                            gs_weight, gs_bias))\n",
+    "        f.write(struct.pack(\"6i\", l.in_features, l.out_features, qoffset, soffset, gs_weight, gs_bias))\n",
     "\n",
-    "        nweights = layer.in_features * layer.out_features\n",
-    "        if layer.bias is not None:\n",
-    "            qoffset += nweights + layer.out_features\n",
-    "            soffset += nweights // gs_weight + layer.out_features // gs_bias\n",
+    "        nweights = l.in_features * l.out_features\n",
+    "        if l.bias is not None:\n",
+    "            qoffset += nweights + l.out_features\n",
+    "            soffset += nweights // gs_weight + l.out_features // gs_bias\n",
     "        else:\n",
     "            qoffset += nweights\n",
     "            soffset += nweights // gs_weight   \n",
@@ -394,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "8e696dc1",
    "metadata": {},
    "outputs": [
@@ -402,15 +416,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.001162409782409668\n",
+      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.000990554690361023\n",
       "Quantized (1,) to Q8_0 with max error 0.0\n",
-      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.0007749646902084351\n",
-      "Quantized (2, 3) to Q8_0 with max error 0.0010278001427650452\n",
-      "Quantized (2,) to Q8_0 with max error 3.308430314064026e-05\n",
-      "Quantized (1, 2) to Q8_0 with max error 0.0016409754753112793\n",
-      "max quantization group error across all weights: 0.0016409754753112793\n",
-      "wrote /tmp/.test.bin\n",
-      "221\n"
+      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.0012641102075576782\n",
+      "Quantized (2, 3) to Q8_0 with max error 0.0010920166969299316\n",
+      "Quantized (2,) to Q8_0 with max error 5.929917097091675e-05\n",
+      "Quantized (1, 2) to Q8_0 with max error 0.0011622309684753418\n",
+      "max quantization group error across all weights: 0.0012641102075576782\n",
+      "wrote /tmp/.test.bin\n"
      ]
     }
    ],
@@ -439,8 +452,7 @@
     "    fname = '/tmp/.test.bin'\n",
     "    mpath = \"test.pt\"\n",
     "    export_modelq8(m, fname, gs=10)\n",
-    "    print(os.path.getsize(fname))\n",
-    "    assert os.path.getsize(fname)==221\n",
+    "    assert os.path.getsize(fname)==261\n",
     "\n",
     "test_export_modelq8()"
    ]
@@ -454,7 +466,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae73b6fb92c84b74b5347589d042ccc2",
+       "model_id": "8e44d6af257a4b17b7bab9f573af7f79",
        "version_major": 2,
        "version_minor": 0
       },
@@ -469,51 +481,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wrote resnet18\n",
-      "Quantized (64, 3, 7, 7) to Q8_0 with max error 0.0014927666634321213\n",
-      "Quantized (64,) to Q8_0 with max error 0.0027480125427246094\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0014041177928447723\n",
-      "Quantized (64,) to Q8_0 with max error 0.004259288311004639\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0030389800667762756\n",
-      "Quantized (64,) to Q8_0 with max error 0.007005281746387482\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.000996860209852457\n",
-      "Quantized (64,) to Q8_0 with max error 0.004529852420091629\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.004110235720872879\n",
-      "Quantized (64,) to Q8_0 with max error 0.004633735865354538\n",
-      "Quantized (128, 64, 3, 3) to Q8_0 with max error 0.000799116212874651\n",
-      "Quantized (128,) to Q8_0 with max error 0.002840474247932434\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.0027258535847067833\n",
-      "Quantized (128,) to Q8_0 with max error 0.005659207701683044\n",
-      "Quantized (128, 64, 1, 1) to Q8_0 with max error 0.002594406483694911\n",
-      "Quantized (128,) to Q8_0 with max error 0.0040948763489723206\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.0012302137911319733\n",
-      "Quantized (128,) to Q8_0 with max error 0.003189489245414734\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.0032473504543304443\n",
-      "Quantized (128,) to Q8_0 with max error 0.00449526309967041\n",
-      "Quantized (256, 128, 3, 3) to Q8_0 with max error 0.0009208954870700836\n",
-      "Quantized (256,) to Q8_0 with max error 0.0033157505095005035\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.002117447555065155\n",
-      "Quantized (256,) to Q8_0 with max error 0.0024379342794418335\n",
-      "Quantized (256, 128, 1, 1) to Q8_0 with max error 0.0016306489706039429\n",
-      "Quantized (256,) to Q8_0 with max error 0.0012940764427185059\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.001060747541487217\n",
-      "Quantized (256,) to Q8_0 with max error 0.0032491981983184814\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.003918588161468506\n",
-      "Quantized (256,) to Q8_0 with max error 0.004005499184131622\n",
-      "Quantized (512, 256, 3, 3) to Q8_0 with max error 0.0011239498853683472\n",
-      "Quantized (512,) to Q8_0 with max error 0.002194136381149292\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.004361260682344437\n",
-      "Quantized (512,) to Q8_0 with max error 0.004285290837287903\n",
-      "Quantized (512, 256, 1, 1) to Q8_0 with max error 0.003636285662651062\n",
-      "Quantized (512,) to Q8_0 with max error 0.002968907356262207\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.0011258642189204693\n",
-      "Quantized (512,) to Q8_0 with max error 0.0032904595136642456\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.01702466607093811\n",
-      "Quantized (512,) to Q8_0 with max error 0.011147633194923401\n",
+      "wrote resnet18.bin\n",
+      "Quantized (64, 3, 7, 7) to Q8_0 with max error 0.00399431586265564\n",
+      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0030971625819802284\n",
+      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0018653776496648788\n",
+      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0025304292794317007\n",
+      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0014979839324951172\n",
+      "Quantized (128, 64, 3, 3) to Q8_0 with max error 0.0012937188148498535\n",
+      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.0016725650057196617\n",
+      "Quantized (128, 64, 1, 1) to Q8_0 with max error 0.0030133600812405348\n",
+      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.001718759536743164\n",
+      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.0013971449807286263\n",
+      "Quantized (256, 128, 3, 3) to Q8_0 with max error 0.0015289076836779714\n",
+      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.0013069347478449345\n",
+      "Quantized (256, 128, 1, 1) to Q8_0 with max error 0.0010194750502705574\n",
+      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.0011562332510948181\n",
+      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.001282520592212677\n",
+      "Quantized (512, 256, 3, 3) to Q8_0 with max error 0.0014599449932575226\n",
+      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.0013700081035494804\n",
+      "Quantized (512, 256, 1, 1) to Q8_0 with max error 0.0028739231638610363\n",
+      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.0010436158627271652\n",
+      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.0010597873479127884\n",
       "Quantized (512, 1024) to Q8_0 with max error 0.0008306273957714438\n",
       "Quantized (10, 512) to Q8_0 with max error 0.0008944347500801086\n",
-      "max quantization group error across all weights: 0.01702466607093811\n",
-      "wrote resnet18_q8\n"
+      "max quantization group error across all weights: 0.00399431586265564\n",
+      "wrote resnet18_q8.bin\n"
      ]
     }
    ],
@@ -521,14 +513,14 @@
     "from train import load\n",
     "\n",
     "model = load(\"resnet18\").model\n",
-    "export_model(model, \"resnet18\")\n",
-    "export_modelq8(model, \"resnet18_q8\", gs=64)"
+    "export_model(model, \"resnet18.bin\")\n",
+    "export_modelq8(model, \"resnet18_q8.bin\", gs=64)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f539b32",
+   "id": "bea6b158",
    "metadata": {},
    "outputs": [],
    "source": []
