replace batchnorm folding function with one in fasterai

--- a/export.ipynb
+++ b/export.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "id": "8c4f6d8b",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,13 @@
     "import struct\n",
     "import numpy as np\n",
     "from sympy import divisors\n",
-    "import copy"
+    "import copy\n",
+    "from fasterai.misc.bn_folding import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "id": "98446256",
    "metadata": {},
    "outputs": [],
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "id": "e8ed7cab",
    "metadata": {},
    "outputs": [],
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "id": "74840945",
    "metadata": {},
    "outputs": [],
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "id": "de6ec66e",
    "metadata": {},
    "outputs": [],
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "id": "76139411",
    "metadata": {},
    "outputs": [],
@@ -138,28 +139,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "id": "8e29ffa9",
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
-    "def fold_batchnorm(cnn, bn) :\n",
-    "    ''' Fold batchnorm layer into convolutional layer '''\n",
-    "\n",
-    "    # apply batchnorm folding\n",
-    "    var = 1 / torch.sqrt(bn.running_var + bn.eps)\n",
-    "    w_fold = cnn.weight.data * (bn.weight.data * var).view(-1,1,1,1)\n",
-    "    cnn.weight.data = w_fold\n",
-    "\n",
-    "    if cnn.bias is None:\n",
-    "        cnn.bias = torch.nn.Parameter(torch.zeros(cnn.weight.shape[0])) # initialize bias as 0 if doesn't exist\n",
-    "\n",
-    "    b_fold = bn.weight.data * (cnn.bias.data - bn.running_mean) * var + bn.bias.data\n",
-    "    cnn.bias.data = b_fold\n",
-    "    \n",
-    "\n",
-    "\n",
     "def export_model(model, file_path=\"model.bin\"):\n",
     "    '''\n",
     "    Export the quantized model to a file\n",
@@ -168,13 +153,11 @@
     "    2. CNN, FC and BN layers' configuration\n",
     "    3. CNN, FC and BN layers' parameters\n",
     "    '''\n",
-    "    model = copy.deepcopy(model)\n",
+    "    # batchnorm folding\n",
+    "    model = BN_Folder().fold(model)\n",
     "    f = open(file_path, \"wb\")\n",
     "    # write model config\n",
     "    conv_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Conv2d)]\n",
-    "    bn_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.BatchNorm2d)]\n",
-    "    for conv_layer, bn_layer in zip(conv_layers, bn_layers):\n",
-    "        fold_batchnorm(conv_layer, bn_layer) # fold batchnorm2d layers into convolutional layers\n",
     "    nconv = len(conv_layers)\n",
     "    # read batchnorm1d layers to which batchnorm folding cannot be applied\n",
     "    bn_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.BatchNorm1d)]\n",
@@ -221,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 66,
    "id": "fdbbe72d",
    "metadata": {},
    "outputs": [
@@ -246,20 +229,24 @@
     "        self.fc1 = nn.Linear(3, 2)\n",
     "        self.bn1d = nn.BatchNorm1d(2)\n",
     "        self.fc2 = nn.Linear(2, 1, bias=False)\n",
+    "    def forward(self, x):\n",
+    "        return self.fc2(self.bn1d(self.fc1(self.bn2d(self.conv2(self.conv1(x))))))\n",
     "\n",
-    "m = TestModel()\n",
+    "m = TestModel().eval()\n",
     "\n",
+    "# header, conv_config, linear_config, bn_config, conv_param, linear_param, bn_param\n",
+    "# 4*4 + 2*7*4 + 2*4*4 + 1*2*4 + 2*(3*3+1)*4 + (3*2+2+2*1)*4 + 2*4*4 = 264\n",
     "def test_export_model():\n",
     "    fname = '/tmp/.test.bin'\n",
     "    export_model(m, fname)\n",
-    "    assert os.path.getsize(fname)==260 # manucally calc from export_model()\n",
+    "    assert os.path.getsize(fname)==264 # manually calc from export_model()\n",
     "\n",
     "test_export_model()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 67,
    "id": "6a09db19",
    "metadata": {},
    "outputs": [],
@@ -268,31 +255,12 @@
     "    conv_layer = nn.Conv2d(3, 16, kernel_size=3, stride=1, padding=1, bias=False)\n",
     "    bn_layer = nn.BatchNorm2d(16)\n",
     "    fold_batchnorm(conv_layer, bn_layer)\n",
-    "    assert conv_layer.bias is not None, \"Bias is None after folding.\"\n",
-    "\n",
-    "# Unit test for batchnorm folding\n",
-    "def test_folding():\n",
-    "    input_tensor = torch.randn(1, 3, 32, 32)\n",
-    "    conv_layer_original = nn.Conv2d(3, 16, kernel_size=3, stride=1, padding=1, bias=True)\n",
-    "    bn_layer = nn.BatchNorm2d(16)\n",
-    "    conv_layer_folded = nn.Conv2d(3, 16, kernel_size=3, stride=1, padding=1, bias=True)\n",
-    "    conv_layer_folded.load_state_dict(conv_layer_original.state_dict())\n",
-    "    with torch.no_grad():\n",
-    "            bn_layer(conv_layer_original(input_tensor)) # the running mean and var are updated, \"forward pass\"\n",
-    "\n",
-    "            bn_layer.eval() # use current running mean and var\n",
-    "            fold_batchnorm(conv_layer_folded, bn_layer)\n",
-    "            output_original = bn_layer(conv_layer_original(input_tensor))\n",
-    "            output_folded = conv_layer_folded(input_tensor)\n",
-    "            assert torch.allclose(output_original, output_folded, atol=1e-5), \"Output mismatch after folding.\"\n",
-    "\n",
-    "test_bias_not_none()\n",
-    "test_folding()"
+    "    assert conv_layer.bias is not None, \"Bias is None after folding.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 68,
    "id": "71f18915",
    "metadata": {},
    "outputs": [],
@@ -408,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
    "id": "8e696dc1",
    "metadata": {},
    "outputs": [
@@ -416,13 +384,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.000990554690361023\n",
+      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.001264810562133789\n",
       "Quantized (1,) to Q8_0 with max error 0.0\n",
-      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.0012641102075576782\n",
-      "Quantized (2, 3) to Q8_0 with max error 0.0010920166969299316\n",
-      "Quantized (2,) to Q8_0 with max error 5.929917097091675e-05\n",
-      "Quantized (1, 2) to Q8_0 with max error 0.0011622309684753418\n",
-      "max quantization group error across all weights: 0.0012641102075576782\n",
+      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.0011606067419052124\n",
+      "Quantized (2, 3) to Q8_0 with max error 0.001620173454284668\n",
+      "Quantized (2,) to Q8_0 with max error 0.0009410381317138672\n",
+      "Quantized (1, 2) to Q8_0 with max error 0.0001624971628189087\n",
+      "max quantization group error across all weights: 0.001620173454284668\n",
       "wrote /tmp/.test.bin\n"
      ]
     }
@@ -459,14 +427,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 70,
    "id": "a0486bb6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e44d6af257a4b17b7bab9f573af7f79",
+       "model_id": "fd52e58ab9274d10a04c78f6102db332",
        "version_major": 2,
        "version_minor": 0
       },
@@ -520,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bea6b158",
+   "id": "20ac02a6",
    "metadata": {},
    "outputs": [],
    "source": []
