simplify run/runq command
Before it was needed to specify model size like
```
$ ./run 18 model.bin data
```
Now the model size is automatically detected from model file, thus C inferences can be executed by
```
$ ./run model.bin data
```

--- a/test_all.ipynb
+++ b/test_all.ipynb
@@ -73,7 +73,7 @@
     "    model = load(f\"resnet{model_size}\").model\n",
     "    ref = calculate_reference_values(model, file_path)\n",
     "    export_model(model)\n",
-    "    command = [\"./run\", \"test\", str(model_size), \"model.bin\", file_path]\n",
+    "    command = [\"./run\", \"test\", \"model.bin\", file_path]\n",
     "    res = execute(command)\n",
     "\n",
     "    assert np.allclose(res, ref, atol=1e-5, rtol=0), \"run.c: Probabilities are not close.\"\n",
@@ -81,11 +81,11 @@
     "    if quantized:\n",
     "        # run quantized model test with group size = 1 and 2 in test mode\n",
     "        export_modelq8(model, file_path=\"modelq8_1.bin\", gs=1)\n",
-    "        resq1 = execute([\"./runq\", \"test\", str(model_size), \"modelq8_1.bin\", file_path])\n",
+    "        resq1 = execute([\"./runq\", \"test\", \"modelq8_1.bin\", file_path])\n",
     "        assert np.allclose(resq1, ref, atol=1e-5, rtol=0), \"runq.c (group size = 1): Probabilities are not close.\"\n",
     "\n",
     "        export_modelq8(model, file_path=\"modelq8_2.bin\", gs=2)\n",
-    "        resq2 = execute([\"./runq\", \"test\", str(model_size), \"modelq8_2.bin\", file_path])\n",
+    "        resq2 = execute([\"./runq\", \"test\", \"modelq8_2.bin\", file_path])\n",
     "        assert np.allclose(resq2, ref, atol=2e-2, rtol=0), \"runq.c (group size = 2):Probabilities are not close.\"\n",
     "\n",
     "    print(\"Done\")"
