--- a/export.ipynb
+++ b/export.ipynb
@@ -2,23 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "id": "8c4f6d8b",
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
-    "import torch\n",
     "import struct\n",
     "import numpy as np\n",
     "from sympy import divisors\n",
     "import copy\n",
-    "from fasterai.misc.bn_folding import *"
+    "\n",
+    "from fastai.vision.all import *\n",
+    "from fasterai.misc.bn_folding import *\n",
+    "\n",
+    "import torch\n",
+    "from torch.ao.quantization import get_default_qconfig_mapping\n",
+    "import torch.ao.quantization.quantize_fx as quantize_fx\n",
+    "from torch.ao.quantization.quantize_fx import convert_fx, prepare_fx\n",
+    "\n",
+    "from train import load"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "id": "98446256",
    "metadata": {},
    "outputs": [],
@@ -30,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "id": "e8ed7cab",
    "metadata": {},
    "outputs": [],
@@ -38,20 +46,26 @@
     "#|export\n",
     "def serialize_fp32(file, tensor):\n",
     "    ''' Write one fp32 tensor to file that is open in wb mode '''\n",
-    "    d = tensor.detach().cpu().view(-1).to(torch.float32).numpy()\n",
+    "    d = tensor.detach().cpu().reshape(-1).to(torch.float32).numpy()\n",
     "    b = struct.pack(f'{len(d)}f', *d)\n",
     "    file.write(b)\n",
     "\n",
     "def serialize_int8(file, tensor):\n",
     "    ''' Write one int8 tensor to file that is open in wb mode '''\n",
-    "    d = tensor.detach().cpu().view(-1).numpy().astype(np.int8)\n",
+    "    d = tensor.detach().cpu().reshape(-1).numpy().astype(np.int8)\n",
     "    b = struct.pack(f'{len(d)}b', *d)\n",
+    "    file.write(b)\n",
+    "\n",
+    "def serialize_int32(file, tensor):\n",
+    "    ''' Write one int32 tensor to file that is open in wb mode '''\n",
+    "    d = tensor.detach().cpu().reshape(-1).numpy().astype(np.int32)\n",
+    "    b = struct.pack(f'{len(d)}i', *d)\n",
     "    file.write(b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "id": "74840945",
    "metadata": {},
    "outputs": [],
@@ -82,12 +96,24 @@
     "    b = torch.tensor(struct.unpack(f'6b', x)).reshape(2,3)\n",
     "    assert (a==b).all()\n",
     "    \n",
-    "test_serialize_int8(fname)"
+    "test_serialize_int8(fname)\n",
+    "\n",
+    "# Unit test for serialize_int8\n",
+    "def test_serialize_int32(fname):\n",
+    "    a = torch.tensor([[0,1,2],[3,4,5]], dtype=torch.int8)\n",
+    "    with open(fname, 'wb') as f:\n",
+    "        serialize_int32(f, a)\n",
+    "    with open(fname, 'rb') as f:\n",
+    "        x = f.read()\n",
+    "    b = torch.tensor(struct.unpack(f'6i', x)).reshape(2,3)\n",
+    "    assert (a==b).all()\n",
+    "    \n",
+    "test_serialize_int32(fname)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 31,
    "id": "de6ec66e",
    "metadata": {},
    "outputs": [],
@@ -122,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "id": "76139411",
    "metadata": {},
    "outputs": [],
@@ -139,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 33,
    "id": "8e29ffa9",
    "metadata": {},
    "outputs": [],
@@ -204,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 34,
    "id": "fdbbe72d",
    "metadata": {},
    "outputs": [
@@ -246,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 35,
    "id": "6a09db19",
    "metadata": {},
    "outputs": [],
@@ -260,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 36,
    "id": "71f18915",
    "metadata": {},
    "outputs": [],
@@ -376,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 37,
    "id": "8e696dc1",
    "metadata": {},
    "outputs": [
@@ -384,13 +410,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.001264810562133789\n",
+      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.000990554690361023\n",
       "Quantized (1,) to Q8_0 with max error 0.0\n",
-      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.0011606067419052124\n",
-      "Quantized (2, 3) to Q8_0 with max error 0.001620173454284668\n",
-      "Quantized (2,) to Q8_0 with max error 0.0009410381317138672\n",
-      "Quantized (1, 2) to Q8_0 with max error 0.0001624971628189087\n",
-      "max quantization group error across all weights: 0.001620173454284668\n",
+      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.0012641102075576782\n",
+      "Quantized (2, 3) to Q8_0 with max error 0.0010920166969299316\n",
+      "Quantized (2,) to Q8_0 with max error 5.929917097091675e-05\n",
+      "Quantized (1, 2) to Q8_0 with max error 0.0011622309684753418\n",
+      "max quantization group error across all weights: 0.0012641102075576782\n",
       "wrote /tmp/.test.bin\n"
      ]
     }
@@ -427,14 +453,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "a0486bb6",
+   "execution_count": 83,
+   "id": "8ae52be9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "class Quantizer():\n",
+    "    def __init__(self):\n",
+    "        architecture = platform.machine().lower()\n",
+    "        backend = \"qnnpack\" if 'arm' in architecture or 'aarch64' in architecture else \"x86\"\n",
+    "        self.qconfig = get_default_qconfig_mapping(backend)\n",
+    "        torch.backends.quantized.engine = backend\n",
+    "\n",
+    "    def quantize(self, model, calibration_dls):\n",
+    "        x, _ = calibration_dls.valid.one_batch()\n",
+    "        model_prepared = prepare_fx(model.eval(), self.qconfig, x)\n",
+    "        _ = [model_prepared(xb.to('cpu')) for xb, _ in calibration_dls.valid]\n",
+    "\n",
+    "        return model_prepared, convert_fx(model_prepared)\n",
+    "    \n",
+    "# FIX: find the reason ResNet50 fails."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "106b2a94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
+    "def find_input_activation_indices(module, layers, index=0, indices=[]):\n",
+    "    '''\n",
+    "    Find indices for input activations of given layers in the module.\n",
+    "    Parameters:\n",
+    "        module (nn.Module): Module to be analyzed\n",
+    "        index (int): Index of the current activation\n",
+    "        indices (list): List of indices of the input activations\n",
+    "        layers (list): List of layer names whose input activations are to be found\n",
+    "    '''\n",
+    "    if module.__class__.__name__ not in [\"GraphModule\", \"Module\", \"HistogramObserver\"]:\n",
+    "        if module.__class__.__name__ in layers:\n",
+    "            indices.append(index)\n",
+    "        index += 1\n",
+    "        if  module.__class__.__name__==\"AdaptiveAvgPool2d\":\n",
+    "            index += 2\n",
+    "        return index, indices\n",
+    "\n",
+    "    if module.__class__.__name__==\"downsample\":\n",
+    "        print(module)\n",
+    "\n",
+    "    # Iterate through the direct children of the module\n",
+    "    if module.__class__.__name__ not in [\"ConvReLU2d\", \"LinearReLU\"]:\n",
+    "        skip_connection_count = 0 # count number of iterations until reaching downsample\n",
+    "        for name, child in module.named_children():\n",
+    "            if name==\"downsample\":\n",
+    "                indices.append(index - skip_connection_count)\n",
+    "                index += 2\n",
+    "                break;\n",
+    "            skip_connection_count += 1\n",
+    "            index, indices = find_input_activation_indices(child, layers, index, indices)\n",
+    "    return index, indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "1ce87232",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd52e58ab9274d10a04c78f6102db332",
+       "model_id": "364aa703841644a6a303c2fe3b15e1f0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fetching 4 files:   0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Unit test for find_input_activation_indices\n",
+    "def test_find_input_activation_indices():\n",
+    "    learn = load(\"resnet18\")\n",
+    "    _, indices = find_input_activation_indices(learn.model, [\"Conv2d\", \"Linear\"])\n",
+    "    assert indices == [0, 2, 3, 5, 6, 8, 9, 8, 12, 13, 15, 16, 15, 19, 20, 22, 23, 22, 26, 27, 35, 38]\n",
+    "\n",
+    "test_find_input_activation_indices()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "411080cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
+    "def export_modelq8_static(model, model_prepared, file_path=\"modelq8.bin\"):\n",
+    "    '''\n",
+    "    Export the quantized model to a file\n",
+    "    The data inside the file follows this order:\n",
+    "    1. The model config, such as number of each layer\n",
+    "    2. CNN, FC and BN layers' configuration\n",
+    "    3. Activation config: scale and zero point\n",
+    "    FIXME: Now all activation scales & zero points are saved. Most of them can be took from CNN and FC layers,\n",
+    "    so only saving quantized params for addition operation in skip connections is enough.\n",
+    "    4. quantized CNN and FC weights and biases\n",
+    "    7. Non-quantized BN parameters (BN is not quantized at all)\n",
+    "    '''\n",
+    "    f = open(file_path, \"wb\")\n",
+    "    # write model configs\n",
+    "    nclasses = 10\n",
+    "    # gather convolutional layers\n",
+    "    conv_layers = [layer for layer in model.modules() if layer._get_name() in\n",
+    "                   {'QuantizedConvReLU2d', 'QuantizedConv2d'}]\n",
+    "    nconv = len(conv_layers)\n",
+    "    # gather linear layers\n",
+    "    linear_layers = [layer for layer in model.modules() if layer._get_name() in\n",
+    "                    {'QuantizedLinear', 'QuantizedLinearReLU'}]\n",
+    "    nlinear = len(linear_layers)\n",
+    "    # gather batchnorm layers\n",
+    "    bn_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.BatchNorm1d)]\n",
+    "    nbn = len(bn_layers)\n",
+    "    # calculate number of activations\n",
+    "    nactivation = 0\n",
+    "    while True:\n",
+    "        if hasattr(model_prepared, f'activation_post_process_{nactivation}'):\n",
+    "            nactivation += 1\n",
+    "        else:\n",
+    "            break\n",
+    "    # calculate number of params (number of biases is multiplied by 4 because biases are int32)\n",
+    "    nparams = 0\n",
+    "    for l in [*conv_layers, *linear_layers]:\n",
+    "        nparams += l.weight().numel() + 4 * l.bias().numel() if l.bias else l.weight().numel()\n",
+    "    header = struct.pack(\"6i\", nclasses, nconv, nlinear, nbn, nactivation, nparams)\n",
+    "    f.write(header)\n",
+    "    # write layers' config\n",
+    "    qoffset = 0 # offset for quantized parameters\n",
+    "    group_sizes = [] # save group sizes of each layer\n",
+    "    for l in conv_layers:\n",
+    "        has_bias = 1 if l.bias else 0\n",
+    "        f.write(struct.pack(\"6ifif2i\", l.kernel_size[0], l.stride[0], l.padding[0], l.in_channels,\n",
+    "                            l.out_channels, qoffset, l.weight().q_scale(), l.weight().q_zero_point(),\n",
+    "                            l.scale, l.zero_point, has_bias))\n",
+    "        # 4 * l.bias().numel() because bias is int32 while weight is int8\n",
+    "        qoffset += l.weight().numel() if l.bias is None else l.weight().numel() + 4 * l.bias().numel()\n",
+    "\n",
+    "    for l in linear_layers:\n",
+    "        has_bias = 1 if l.bias else 0\n",
+    "        f.write(struct.pack(\"3ifif2i\", l.in_features, l.out_features, qoffset, l.weight().q_scale(),\n",
+    "                            l.weight().q_zero_point(), l.scale, l.zero_point, has_bias))\n",
+    "        qoffset += l.weight().numel() if l.bias is None else l.weight().numel() + 4 * l.bias().numel()\n",
+    "\n",
+    "    foffset = 0 # offset for non-quantized parameters\n",
+    "    for l in bn_layers:\n",
+    "        f.write(struct.pack(\"2i\", l.num_features, foffset))\n",
+    "        # (weight, bias, running_mean, running_var) x size of float (4 bytes)\n",
+    "        foffset += 4 * l.num_features\n",
+    "\n",
+    "    # write scaling factor and zero point of activation layers\n",
+    "    for i in range(nactivation):\n",
+    "        attr = getattr(model_prepared, f'activation_post_process_{i}')\n",
+    "        scaling_factor, zero_point = attr.calculate_qparams()\n",
+    "        f.write(struct.pack(\"fi\", scaling_factor, zero_point))\n",
+    "\n",
+    "    # write layers' quantized weights and biases\n",
+    "    _, activation_indices = find_input_activation_indices(model1, [\"Conv2d\", \"ConvReLU2d\", \"Linear\", \"LinearReLU\"])\n",
+    "    for i, l in enumerate([*conv_layers, *linear_layers]):\n",
+    "        serialize_int8(f, l.weight().int_repr()) # save the tensor in int8\n",
+    "        if l.bias:\n",
+    "            # Ref: https://discuss.pytorch.org/t/is-bias-quantized-while-doing-pytorch-static-quantization/146416/5\n",
+    "            activation = getattr(model_prepared, f'activation_post_process_{activation_indices[i]}')\n",
+    "            i_scale = activation.calculate_qparams()[0].item()\n",
+    "            b = torch.quantize_per_tensor(l.bias().detach(), i_scale * l.weight().q_scale(), 0, torch.qint32)\n",
+    "            serialize_int32(f, b.int_repr())\n",
+    "\n",
+    "    # write batch norm layers' parameters\n",
+    "    for l in bn_layers:\n",
+    "        for p in [l.weight, l.bias, l.running_mean, l.running_var]:\n",
+    "            serialize_fp32(f, p)\n",
+    "\n",
+    "    f.close()\n",
+    "    print(f\"wrote {file_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "eff507d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FIX: write unit test for export_modelq8_static\n",
+    "# FIX: write test in test_all.ipynb, e.g., by uploading qmodels beforehand if possible"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "29866972",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2a52442b962f487b9d109917d1df6b8d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -449,46 +679,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wrote resnet18.bin\n",
-      "Quantized (64, 3, 7, 7) to Q8_0 with max error 0.00399431586265564\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0030971625819802284\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0018653776496648788\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0025304292794317007\n",
-      "Quantized (64, 64, 3, 3) to Q8_0 with max error 0.0014979839324951172\n",
-      "Quantized (128, 64, 3, 3) to Q8_0 with max error 0.0012937188148498535\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.0016725650057196617\n",
-      "Quantized (128, 64, 1, 1) to Q8_0 with max error 0.0030133600812405348\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.001718759536743164\n",
-      "Quantized (128, 128, 3, 3) to Q8_0 with max error 0.0013971449807286263\n",
-      "Quantized (256, 128, 3, 3) to Q8_0 with max error 0.0015289076836779714\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.0013069347478449345\n",
-      "Quantized (256, 128, 1, 1) to Q8_0 with max error 0.0010194750502705574\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.0011562332510948181\n",
-      "Quantized (256, 256, 3, 3) to Q8_0 with max error 0.001282520592212677\n",
-      "Quantized (512, 256, 3, 3) to Q8_0 with max error 0.0014599449932575226\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.0013700081035494804\n",
-      "Quantized (512, 256, 1, 1) to Q8_0 with max error 0.0028739231638610363\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.0010436158627271652\n",
-      "Quantized (512, 512, 3, 3) to Q8_0 with max error 0.0010597873479127884\n",
-      "Quantized (512, 1024) to Q8_0 with max error 0.0008306273957714438\n",
-      "Quantized (10, 512) to Q8_0 with max error 0.0008944347500801086\n",
-      "max quantization group error across all weights: 0.00399431586265564\n",
-      "wrote resnet18_q8.bin\n"
+      "wrote modelq8.bin\n"
      ]
     }
    ],
    "source": [
-    "from train import load\n",
-    "\n",
-    "model = load(\"resnet18\").model\n",
-    "export_model(model, \"resnet18.bin\")\n",
-    "export_modelq8(model, \"resnet18_q8.bin\", gs=64)"
+    "# Example quantization process - comment out before pushing to GitHub because it takes time in the tests\n",
+    "#path = untar_data(URLs.IMAGENETTE_320, data=Path.cwd()/'data')\n",
+    "#dls = ImageDataLoaders.from_folder(path, valid='val', item_tfms=Resize(224),\n",
+    "#                                   batch_tfms=Normalize.from_stats(*imagenet_stats), bs=64)\n",
+    "#learn = load(\"resnet18\")\n",
+    "#model_prepared, qmodel = Quantizer().quantize(learn.model, dls)\n",
+    "#export_modelq8_static(qmodel, model_prepared)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20ac02a6",
+   "id": "32c9d2a4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -510,7 +718,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
